--- a/core_files/style.css
+++ b/core_files/style.css
@@ -130,3 +130,18 @@ color: #FFFFFF;
 	position: relative;
 	left: 0;
 }
+
+.right{
+	text-align: right;
+}
+
+.left{
+	text-align: left;
+	padding-left: 20px;
+}
+.design_table{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 100px;
+	padding-right: 100px;
+}
